--- a/charts/forms-flow-ai/templates/redis-exporter/configmap.yaml
+++ b/charts/forms-flow-ai/templates/redis-exporter/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  redis.conf: {{ .Values.redis.configMap.redis_conf | quote }}
+  redis.conf: {{ .Values.redisExporter.redis.configMap.redis_conf | quote }}
   update-node.sh: |
     #!/bin/sh
     CLUSTER_CONFIG="/data/nodes.conf"
@@ -21,5 +21,5 @@ data:
 kind: ConfigMap
 metadata:
   labels:
-    app: {{ .Chart.Name }}
-  name: {{ .Chart.Name }}
+    app: redis-exporter
+  name: redis-exporter
