--- a/charts/forms-flow-ai/templates/redis-exporter/service.yaml
+++ b/charts/forms-flow-ai/templates/redis-exporter/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Chart.Name }}
-  name: {{ .Chart.Name }}
+    app: redis-exporter
+  name: redis-exporter
 spec:
   ports:
   - name: client
@@ -13,5 +13,5 @@ spec:
     port: 16379
     targetPort: 16379
   selector:
-    app: {{ .Chart.Name }}
+    app: redis-exporter
   type: ClusterIP
