--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: forms-flow-idm
-version: v7.0.5
+version: v7.1.0
 dependencies:
   - name: keycloak
     version: 19.1.0
@@ -10,4 +10,7 @@ dependencies:
     condition: postgresql-ha.enabled 
     repository: https://charts.bitnami.com/bitnami
     version: 14.2.16
+  - name: common
+    repository: oci://registry-1.docker.io/bitnamicharts
+    version: 2.x.x
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
