--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      HELM_EXPERIMENTAL_OCI: 1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
