--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -8,8 +8,6 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    env:
-      HELM_EXPERIMENTAL_OCI: 1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,12 +20,12 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Install Helm
-        uses: azure/setup-helm@v1
+        uses: azure/setup-helm@v4.2.0
         with:
-          version: v3.4.0
+          version: latest
       
       - name: Package Formsflow 
-        uses: helm/chart-releaser-action@v1.2.1
+        uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
         env:
