Updated forms-flow-admin chart

--- a/charts/forms-flow-admin/templates/secrets.yaml
+++ b/charts/forms-flow-admin/templates/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" (dict "customLabels" .Values.commonLabels "context" $) | nindent 4 }}
     app.kubernetes.io/component: forms-flow-admin
-  {{- if or .Values.auth.annotations .Values.commonAnnotations }}
+  {{- if or .Values.annotations .Values.commonAnnotations }}
   annotations: {{- include "common.tplvalues.merge" (dict "values" (list .Values.annotations .Values.commonAnnotations) "context" $) | nindent 4 }}
   {{- end }}
 type: Opaque
