updated forms-flow-analytics version

--- a/charts/forms-flow-analytics/templates/server.yaml
+++ b/charts/forms-flow-analytics/templates/server.yaml
@@ -133,6 +133,34 @@ spec:
         {{- else if ne .Values.server.resourcesPreset "none" }}
         resources: {{- include "common.resources.preset" (dict "type" .Values.server.resourcesPreset) | nindent 12 }}
         {{- end }}
+        {{- if not .Values.server.diagnosticMode.enabled }}
+        {{- if .Values.server.customLivenessProbe }}
+        livenessProbe: {{- include "common.tplvalues.render" (dict "value" .Values.server.customLivenessProbe "context" $) | nindent 12 }}
+        {{- else if .Values.server.livenessProbe.enabled }}
+        livenessProbe:
+          failureThreshold: {{ .Values.server.livenessProbe.failureThreshold }}
+          initialDelaySeconds: {{ .Values.server.livenessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.server.livenessProbe.periodSeconds }}
+          successThreshold: {{ .Values.server.livenessProbe.successThreshold }}
+          timeoutSeconds: {{ .Values.server.livenessProbe.timeoutSeconds }}
+          httpGet:
+            path: /ping
+            port: 5000
+        {{- end }}
+        {{- if .Values.server.customReadinessProbe }}
+        readinessProbe: {{- include "common.tplvalues.render" (dict "value" .Values.server.customReadinessProbe "context" $) | nindent 12 }}
+        {{- else if .Values.server.readinessProbe.enabled }}
+        readinessProbe:
+          failureThreshold: {{ .Values.server.readinessProbe.failureThreshold }}
+          initialDelaySeconds: {{ .Values.server.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.server.readinessProbe.periodSeconds }}
+          successThreshold: {{ .Values.server.readinessProbe.successThreshold }}
+          timeoutSeconds: {{ .Values.server.readinessProbe.timeoutSeconds }}
+          httpGet:
+            path: /ping
+            port: 5000
+        {{- end }}
+        {{- end }}
         ports:
         - name: http
           containerPort: {{ .Values.server.containerPorts.http }}
