--- a/charts/forms-flow-data-analysis/values.yaml
+++ b/charts/forms-flow-data-analysis/values.yaml
@@ -199,7 +199,7 @@ extraVolumeMounts: {}
 ## @param auth.existingSecret Existing secret containing password,username,dbname and 
   ##
 existingSecret: ""
-## @param grafana.updateStrategy.type Set up update strategy for Grafana installation.
+## @param updateStrategy.type Set up update strategy for forms-flow-data-analysis installation.
 ## Set to Recreate if you use persistent volume that cannot be mounted by more than one pods to make sure the pods is destroyed first.
 ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
 ## Example:
