--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -201,7 +201,7 @@ extraVolumeMounts: {}
 auth:
   existingSecret: ""
   annotations: {}
-## @param grafana.updateStrategy.type Set up update strategy for Grafana installation.
+## @param updateStrategy.type Set up update strategy for forms-flow-documents-api installation.
 ## Set to Recreate if you use persistent volume that cannot be mounted by more than one pods to make sure the pods is destroyed first.
 ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
 ## Example:
