--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -203,7 +203,7 @@ extraVolumeMounts: {}
   ##
 existingSecret: ""
 
-## @param grafana.updateStrategy.type Set up update strategy for Grafana installation.
+## @param updateStrategy.type Set up update strategy for forms-flow-web installation.
 ## Set to Recreate if you use persistent volume that cannot be mounted by more than one pods to make sure the pods is destroyed first.
 ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
 ## Example:
