--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -105,71 +105,70 @@ spec:
                 key: KEYCLOAK_TOKEN_URL
                 name: "{{ .Values.formsflow.configmap }}"
           {{- if .Values.ExternalDatabase.ExistingDatabaseNameKey }}
-          - name: FORMSFLOW_API_DB_NAME
+          - name: DATABASE_NAME
             valueFrom:
               secretKeyRef:
                 key: {{ .Values.ExternalDatabase.ExistingDatabaseNameKey }}
                 name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
-          {{- end }}
-          {{- if not .Values.ExternalDatabase.ExistingDatabaseNameKey }}
-          - name: FORMSFLOW_API_DB_NAME
+          {{- else }}
+          - name: DATABASE_NAME
             valueFrom:
               secretKeyRef:
                 key: FORMSFLOW_API_DB_NAME
                 name: "{{ .Chart.Name }}"
           {{- end }}
           {{- if .Values.ExternalDatabase.ExistingDatabasePasswordKey }}
-          - name: FORMSFLOW_API_DB_PASSWORD
+          - name: DATABASE_PASSWORD
             valueFrom:
               secretKeyRef:
                 key: {{ .Values.ExternalDatabase.ExistingDatabasePasswordKey }}
                 name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
-          {{- end }}
-          {{- if not .Values.ExternalDatabase.ExistingDatabasePasswordKey }}
-          - name: FORMSFLOW_API_DB_PASSWORD
+          {{- else }}
+          - name: DATABASE_PASSWORD
             valueFrom:
               secretKeyRef:
                 key: FORMSFLOW_API_DB_PASSWORD
                 name: "{{ .Chart.Name }}"
           {{- end }}
           {{- if .Values.ExternalDatabase.ExistingDatabaseUserNameKey }}
-          - name: FORMSFLOW_API_DB_USER
+          - name: DATABASE_USERNAME
             valueFrom:
               secretKeyRef:
                 key: {{ .Values.ExternalDatabase.ExistingDatabaseUserNameKey }}
                 name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
-          {{- end }}
-          {{- if not .Values.ExternalDatabase.ExistingDatabaseUserNameKey }}
-          - name: FORMSFLOW_API_DB_USER
+          {{- else }}
+          - name: DATABASE_USERNAME
             valueFrom:
               secretKeyRef:
                 key: FORMSFLOW_API_DB_USER
                 name: "{{ .Chart.Name }}"
           {{- end }}
-          - name: FORMSFLOW_API_PORT
+          {{- if .Values.ExternalDatabase.ExistingDatabasePortKey }}
+          - name: DATABASE_PORT
+            valueFrom:
+              secretKeyRef:
+                key: {{ .Values.ExternalDatabase.ExistingDatabasePortKey }}
+                name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
+          {{- else }}
+          - name: DATABASE_PORT
             valueFrom:
               configMapKeyRef:
                 key: FORMSFLOW_API_PORT
                 name: "{{ .Chart.Name }}"
+          {{- end }}
           {{- if .Values.ExternalDatabase.ExistingDatabasHostKey }}
-          - name: FORMSFLOW_API_HOSTNAME
+          - name: DATABASE_HOST
             valueFrom:
               secretKeyRef:
                 key: {{ .Values.ExternalDatabase.ExistingDatabaseHostKey }}
                 name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
-          {{- end }}
-          {{- if not .Values.ExternalDatabase.ExistingDatabaseHostKey }}
-          - name: FORMSFLOW_API_HOSTNAME
+          {{- else }}
+          - name: DATABASE_HOST
             valueFrom:
               secretKeyRef:
                 key: FORMSFLOW_API_HOSTNAME
                 name: "{{ .Chart.Name }}"
           {{- end }}
-          - name: DATABASE_URL
-            valueFrom:
-              configMapKeyRef:
-                key: DATABASE_URL
-                name: "{{ .Chart.Name }}"
           - name: JWT_OIDC_ALGORITHMS
             valueFrom:
               configMapKeyRef:
