--- a/charts/forms-flow-api/templates/secrets.yaml
+++ b/charts/forms-flow-api/templates/secrets.yaml
@@ -14,5 +14,5 @@ stringData:
   FORMSFLOW_API_DB_USER: {{ .Values.database.username }}
   FORMSFLOW_API_DB_PASSWORD: {{ .Values.database.password }}
   FORMSFLOW_API_DB_NAME: {{ .Values.database.dbName }}
-  FORMSFLOW_API_HOSTNAME: {{ .Values.database.dbName }}
+  FORMSFLOW_API_HOSTNAME: {{ .Values.database.host }}
 {{- end }}
